@@ -1,4 +1,4 @@
-MANIFEST for ded, version t20010130
+MANIFEST for ded, version t20010515
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
